Fixed layout issue with forms on different browsers and added ellipsis to notifications when browser width is small.

--- a/TabRepository/wwwroot/css/site.css
+++ b/TabRepository/wwwroot/css/site.css
@@ -183,11 +183,11 @@ body {
 .center-form-inner-container {
     display: table-cell;
     vertical-align: middle;
+    text-align: center;
 }
 
 .form-label {
     text-align: left;
-    margin-left: 15px;
 }
 
 /*loader animations for loading lists and for saving*/
@@ -377,4 +377,9 @@ body {
 
 .selection-modal {
     max-width: 400px;
+}
+
+.form-group {
+    margin-left: 0px !important;
+    margin-right: 0px !important;
 }
